package at.kalwodaknezevic.inventoryhub.domain;

public enum AddressType {
    BILLING,
    SHIPPING
}
