package at.kalwodaknezevic.inventoryhub.domain;

public enum Category {
    ELECTRONICS,
    FURNITURE,
    CLOTHING,
    TOYS,
    TOOLS,
    OTHER
}
