package at.kalwodaknezevic.inventoryhub.domain;

public enum OrderStatus {
    PENDING,
    SHIPPED,
    DELIVERED,
    CANCELLED
}
