@startuml
'hide methods

class Article <Entity> {
    - id: Long
    - name: Name
    - description: String
    - category: Category
    - price: Float
    - quantity: Integer
}

class Supplier <Entity> {
    - id: Long
    - companyName: String
}

class Employee <Entity> {
    - id: Long
    - position: String
    - salary: Float
}

class Person {
    - firstName: String
    - lastName: String
    - birthDate: Date
}

class Email <RichType> <<(R, #3498eb) embedded >> {
    - value: String
}

class PhoneNumber <ValueObject> <<(V, #009c1d) Embeddable >> {
    - countryCode: Integer
    - areaCode: Integer
    - serialNumber: String
    - extension: Integer
    - types: EnumSet<PhoneNumberType>
}

enum PhoneNumberType <Enum> {
    HOME
    MOBILE
    WORK
    FAX
    OTHER
}

class Address <ValueObject> <<(V, #009c1d) Embeddable >> {
    - street: String
    - city: String
    - zip: String
    - country: String
}

enum AddressType <Enum> {
    BILLING
    SHIPPING
}

class Country <Entity> {
    - id: Long
    - name: String
    - iso2Code: String
    - iso3Code: String
    - areaCode: Integer
}

class Order <Entity> {
    - id: Long
    - supplier: Supplier
    - articles: List<OrderItem>
    - orderDate: Date
    - deliveryDate: Date
    - status: OrderStatus
    - employee: Employee

}

class OrderItem <Entity> {
    - article: Article
    - quantity: Integer
}

enum OrderStatus <Enum> {
    PENDING
    SHIPPED
    DELIVERED
    CANCELLED
}

class Name <RichType> <<(R, #3498eb) embedded >> {
    - value: String
}

enum Category <Enum> {
    ELECTRONICS
    CLOTHING
    FOOD
    FURNITURE
}

Employee --|> Person : inherits
Supplier --|> Person : inherits
Article .up.> Category : < embedded
Article .down.> Name : < embedded
Order -right-> Supplier : references (FK)
Order *-- OrderItem : > owns
Order .left.> OrderStatus : < embedded
Supplier .down.> Email : < embedded
Supplier .right.> PhoneNumber : < embedded
PhoneNumber -down-o PhoneNumberType : references
Supplier *-down- Address : > owns
Address -down-> Country : references (FK)
Address .down.> AddressType : < embedded
Order .left.> Employee : "managed by"
Article -down-> OrderItem : references (FK)

@enduml
